add references.bib; modify main text with bibtex refs

--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -3,6 +3,7 @@ title: "TTmanuscript"
 author: "Dennis Hazelett"
 date: "4/18/2020"
 output: html_document
+bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
@@ -13,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Title: A molecular taxonomy of tumors independent of tissue-of-origin
 
-### Authors: Peter T. Nguyen, Simon G. Coetzee, Corona I. Rosario, and Dennis J. Hazelett
+#### Authors: Peter T. Nguyen, Simon G. Coetzee, Daniel Lakeland and Dennis J. Hazelett
  
 ## Abstract: 
 Cancer is a disease that affects metabolism and other basic cellular processes common to all cells. In spite of this, molecular signatures remain largely indistinguishable from tissue of origin, and general, unifying theories elude the field. To address this challenge we reduced omics mutation and expression profiling data to pathway memberships. We found that tumors can be classified according to pathway disruption in twelve distinct classes orthogonal to a tissue of origin (including histological subtypes), number of mutations and clinical stage. Moreover, known germline risk mutations such as BRCA1/2 are equally distributed among the classes. One class is distinguished by mutations in extracellular receptors and their ligands, particularly RTKs including the ERBB2/4, EGFR, Insulin Receptor and IGFR. This class is neatly subdivided into PI3K/Akt and Ras branches. Of these subclasses, the PI3K/Akt subgroup also has multiple lesions in immune-related pathways, including both innate immunity and T-cell receptor signaling. Another class is typified by mutations in the cellular response to hypoxia and defects in beta-catenin and hedgehog signaling. Intriguingly, we identify a novel class of mutations in proteasome component proteins that may be sufficient to cause compound defects across multiple signaling pathways in this class. A third class is typified by defects in metabolism, especially of RNA and protein biosynthesis. In addition to pathways that distinguish between the 3 major classes of tumor, we identify common mutations across tumors and stages, as well as pathways/mutations that distinguish between metastatic tumors and non-metastatic tumors. With these observations, we present a coherent picture of global tumor biology, in which genes and pathways can generally be assigned to one of three stages: initiation, expansion, and metastasis based on what groups the mutations are found. We discuss the implications for tumor biology and treatment.
@@ -22,11 +23,11 @@ Cancer is a disease that affects metabolism and other basic cellular processes c
  
 Recent advances in technology have made possible the study of cancer at unprecedented levels of detail and scale. A combination of array and next-generation sequencing technologies has made it possible to assay the germline variation and somatic mutations, expression profile, methylation status, copy number variation. To take advantage of these tools, several large consortia, including the cancer genome atlas (TCGA) and pan-cancer analysis of whole genomes (PCAWG) endeavored to sequence large number of tumors (order of thousands) and collect data from multiple assays that could be analyzed together, with an eye towards integration and a general understanding of the mechanisms of cancer. These efforts have consisted chiefly of recognizing and quantifying the importance of individual genes in cancer etiology as the product of positive selection processes, or classification of cancers relative to common patterns of aberration in the expression of those genes in various assays.
 
-Some considerable progress has been made in analyzing these data. Statistical analyses identify hundreds of global and tissue-specific cancer driver genes (pmid 22759861, 23884480, 24390350, 26209800, 27911828, 31287869, 31363082) using approaches aimed at detecting when genes are mutated at a greater rate than expected due to chance. Based on these studies, it has been proposed that on the order of three mutations in key oncogenes and/or tumor suppressors would be sufficient to transform a normal cell to a cancerous state (pmid 26559569). 
+Some considerable progress has been made in analyzing these data. Statistical analyses identify hundreds of global and tissue-specific cancer driver genes [@deesMuSiC2012; @tamboreroOncodriveCLUST2013; @lawrenceDiscoverySaturationAnalysis2014; @kumarStatisticallyIdentifyingTumor2015; @tokheimEvaluatingEvaluationCancer2016; @jiangWITER2019; @zhaoModelingPositive2019] using approaches aimed at detecting when genes are mutated at a greater rate than expected due to chance. Based on these studies, it has been proposed that on the order of three mutations in key oncogenes and/or tumor suppressors would be sufficient to transform a normal cell to a cancerous state [@vogelsteinPathCancerThree2015]. 
 
-Other studies have been aimed at providing a comprehensive view of mutations, gene expression and genomic signatures, with the express goal of understanding the common themes of all cancer independent of tissue of origin. The first of these (the “Pan-Cancer-12” analysis) identified a clade of 11 subtypes from 12 cancer types, using integrative analysis with co-equal weighting of gene expression, methylation, copy number and proteomics data (pmid 25109877). The principal finding was that tissue-of-origin is the predominant driving factor, though a significant proportion of tumors (10%) could be reclassified independent of tissue-of-origin. In a second study involving 33 cancer types and a much greater number of tumors using a newer iCluster method (pmid 19759197), the same authors identify 28 clusters that could be further related or subdivided into organ specific groups, including pan-gastrointestinal, pan-gynecological, pan-squamous, pan-gynecological/squamous and pan-kidney (pmid 29625048). The authors of this study analyzed these categories for pathway enrichment and noted multiple overlapping similarities between these latter categories.
+Other studies have been aimed at providing a comprehensive view of mutations, gene expression and genomic signatures, with the express goal of understanding the common themes of all cancer independent of tissue of origin. The first of these (the “Pan-Cancer-12” analysis) identified a clade of 11 subtypes from 12 cancer types, using integrative analysis with co-equal weighting of gene expression, methylation, copy number and proteomics data [@hoadleyMultiplatformAnalysis2014]. The principal finding was that tissue-of-origin is the predominant driving factor, though a significant proportion of tumors (10%) could be reclassified independent of tissue-of-origin. In a second study involving 33 cancer types and a much greater number of tumors using a newer iCluster method [@shenIntegrativeClusteringMultiple2009], the same authors identify 28 clusters that could be further related or subdivided into organ specific groups, including pan-gastrointestinal, pan-gynecological, pan-squamous, pan-gynecological/squamous and pan-kidney [@hoadleyCellofOriginPatternsDominate2018]. The authors of this study analyzed these categories for pathway enrichment and noted multiple overlapping similarities between these latter categories.
 
-More recently, attempts have been made to consider pan-cancer mutations and other data outside the context of enrichment at the gene level. Horn et al (pmid 29200198) introduce approaches to address the sparseness of mutations, allowing the potential importance of a gene to be influenced by the aggregate of positive selection in its nearest network neighbors. This method proves powerful especially when a small number (on the order of hundreds) of tumors are involved. However, the larger problem of cancer etiology remains: what mutations are required, in what order, and are there specific combinations of delinquent cellular processes sufficient to cause cancer? If there is a common logic to cancer, how is it to be detected underneath the overwhelming cell-of-origin signal?
+More recently, attempts have been made to consider pan-cancer mutations and other data outside the context of enrichment at the gene level. Horn et al [@hornNetSigNetworkbasedDiscovery2018] introduce approaches to address the sparseness of mutations, allowing the potential importance of a gene to be influenced by the aggregate of positive selection in its nearest network neighbors. This method proves powerful especially when a small number (on the order of hundreds) of tumors are involved. However, the larger problem of cancer etiology remains: what mutations are required, in what order, and are there specific combinations of delinquent cellular processes sufficient to cause cancer? If there is a common logic to cancer, how is it to be detected underneath the overwhelming cell-of-origin signal?
 
 In this study, we attempted to address this challenge by focusing on discrete molecular pathways as the unit of disruption in cancer. This operation has the virtue of stripping all cell-type-specific information from the mutation data. We use the resulting statistic to evaluate all cancers and show that, surprisingly, tumors may have distinct phenotypes completely independent of tissue of origin. Furthermore, tumors of varying cancer type and/or histological subtype may merely reflect the likely cell-of-origin that gave birth to them.
 
@@ -78,9 +79,9 @@ The enrichment we observe may be consistent with an interpretation in which the 
  
 ### Classification of tumors independent of tissue-of-origin
  
-The basic problem in tumor research of this kind, namely that the search space, ~20,000 protein-coding genes is greater than the number of tumor samples (pmid 29200198). And that is not accounting for the fact that >30k non-coding genes and hundreds of thousands of non-coding regulatory elements exist with oncogenic or tumor suppressor potential. The bioinformatic challenge therefore is to define the problem precisely and then create a new dataset that addresses this problem. Hence, we define cancer as a malady of biochemical processes and pathways, and generated a dataset that scores each of these essential pathways as mutated or not. 
+The basic problem in tumor research of this kind, namely that the search space, ~20,000 protein-coding genes is greater than the number of tumor samples [@hornNetSigNetworkbasedDiscovery2018]. And that is not accounting for the fact that >30k non-coding genes and hundreds of thousands of non-coding regulatory elements exist with oncogenic or tumor suppressor potential. The bioinformatic challenge therefore is to define the problem precisely and then create a new dataset that addresses this problem. Hence, we define cancer as a malady of biochemical processes and pathways, and generated a dataset that scores each of these essential pathways as mutated or not. 
 
-It is important that we chose point mutations in exome sequencing data for this task because we know unambiguously in most cases the target gene. In addition, we reduce pathway state to a boolean value because it does not matter for our purposes whether a single tumor is “enriched” for pathway mutations, chiefly because such metrics favor larger pathways over smaller ones. The data are likely to be noisy for several reasons. First, point mutations can be deleterious (attenuating or hypomorphic) or activating (neomorphic) in genes that are potentially either activators or repressors. In the current model, we accept this uncertainty and assume mutations are generically disruptive to the pathway. Second, low-expressed genes and non-expressed genes are known to accumulate mutations at a higher rate (pmid 24132290, 29662161). To address this issue, we identified genes with low expression average for each type of cancer and eliminated them for that cancer only. Highly expressed genes also have high mutation rates owing to transcription induced mutagenesis (pmid 23146897). We felt that this mechanism results in cell-type-specific biases that might be biologically meaningful for predisposition to different classes of cancer however, and therefore chose to include these genes in our analysis.
+It is important that we chose point mutations in exome sequencing data for this task because we know unambiguously in most cases the target gene. In addition, we reduce pathway state to a boolean value because it does not matter for our purposes whether a single tumor is “enriched” for pathway mutations, chiefly because such metrics favor larger pathways over smaller ones. The data are likely to be noisy for several reasons. First, point mutations can be deleterious (attenuating or hypomorphic) or activating (neomorphic) in genes that are potentially either activators or repressors. In the current model, we accept this uncertainty and assume mutations are generically disruptive to the pathway. Second, low-expressed genes and non-expressed genes are known to accumulate mutations at a higher rate [@kandothMutationalLandscapeSignificance2013; @kimPancancerAnalysisSomatic2018]. To address this issue, we identified genes with low expression average for each type of cancer and eliminated them for that cancer only. Highly expressed genes also have high mutation rates owing to transcription induced mutagenesis [@parkGenomicEvidenceElevated2012]. We felt that this mechanism results in cell-type-specific biases that might be biologically meaningful for predisposition to different classes of cancer however, and therefore chose to include these genes in our analysis.
  
 We hypothesize that cancer is the result of dysfunction of a limited number of basic cellular processes that are common to all living human cells, and thus all tumors belong on a spectrum of mutations regardless of tissue of origin. An alternative hypothesis is that every tumor belongs to one of a large number of syndromes that share some mechanisms and superficial similarity in treatment strategies. We refer to these as the “single disease” and the “multiple syndrome” hypotheses. The latter seems to have gained momentum in recent years since the publication of Encode, Roadmap and TCGA consortium papers, perhaps owing to the intractable complexity of genomic data in all its forms. The inescapable conclusion thus far is that all these data point to tissue-of-origin as the most important driver of tumor behavior. Our observations support the view of all tumors as manifestations of disease of cellular differentiation and metabolism, but by no means refute entirely the multiple syndrome hypothesis. 
 
@@ -100,3 +101,4 @@ Our findings imply that there are separate processes in the etiology of cancer t
 
 ### Two-step and 3-strike
 
+## References:
