figure references added; header amended add/format TOC and style plain html

--- a/text/references.bib
+++ b/text/references.bib
@@ -319,3 +319,17 @@ AVAILABILITY: R code to implement iCluster can be downloaded at http://www.mskcc
   pmcid = {PMC3512408},
   pmid = {23146897}
 }
+
+@article{McInnes2018,
+  title = {{{UMAP}}: {{Uniform}} Manifold Approximation and Projection for Dimension Reduction},
+  author = {McInnes, Leland and Healy, John and Melville, James},
+  year = {2018},
+  abstract = {UMAP (Uniform Manifold Approximation and Projection) is a novel manifold learning technique for dimension reduction. UMAP is constructed from a theoretical framework based in Riemannian geometry and algebraic topology. The result is a practical scalable algorithm that applies to real world data. The UMAP algorithm is competitive with t-SNE for visualization quality, and arguably preserves more of the global structure with superior run time performance. Furthermore, UMAP has no computational restrictions on embedding dimension, making it viable as a general purpose dimension reduction technique for machine learning.},
+  archivePrefix = {arXiv},
+  arxivid = {1802.03426},
+  eprint = {1802.03426},
+  eprinttype = {arxiv},
+  file = {/Users/hazelettd/Zotero/storage/8D7YU2HE/1802.03426.pdf}
+}
+
+
