rewrite main draft add List of figures text file update references

--- a/text/references.bib
+++ b/text/references.bib
@@ -344,3 +344,24 @@
     pages = {4830--4832}
 }
 
+@article{JSSv025i01,
+   author = {Lê, S. and Josse, J. and Husson, F.},
+   title = {FactoMineR: An R Package for Multivariate Analysis},
+   journal = {Journal of Statistical Software, Articles},
+   volume = {25},
+   number = {1},
+   year = {2008},
+   issn = {1548-7660},
+   pages = {1--18},
+   doi = {10.18637/jss.v025.i01},
+   url = {https://www.jstatsoft.org/v025/i01}
+}
+
+@article{Pervasive_lesion_segregation,
+   author = {Aitken, S.J. and Anderson, C.J. and Connor, F. and Pich, O. and Sundaram, V. et al.},
+   title = {Pervasive Lesion Segregation Shapes Cancer Genome Evolution},
+   journal = {Nature},
+   year = {2020},
+   pmid = {32581361},
+   doi = {10.1038/s41586-020-2435-1}
+}
