--- a/text/manuscript.Rmd
+++ b/text/manuscript.Rmd
@@ -33,7 +33,7 @@ library(ggthemes)
 ```
 
 ## Abstract
-Cancer is a disease that affects metabolism and other basic cellular processes common to all cells. In spite of this, molecular signatures remain largely indistinguishable from tissue of origin, and general, unifying principles elude the field. To address this challenge we reduced tumor mutation data to pathway memberships, using a highly filtered set of pathways representative of basic cellular functions from metabolism and DNA replication to cell-cell communication. We find that tumors can be classified according to pathway disruption in twelve classes entirely distinct from tissue of origin based on these criteria, and largely free of bias from mutational burden and clinical stage. We also show that these tumor classes have different prognoses in different tissues using a hierarchical model of longevity data from the CDC. As a consequence of our pathway-centric classification, we can also identify equivalent sets of class-specific gene mutations in different tissues. Moreover, many known germline risk mutations involved in genome stability such as BRCA1/2 and Rb1 are equally distributed among the classes, somewhat contrary to the expectation that such genes are representative of disease-specific categories or subtypes. Similarly, we describe mutations that distinguish between metastatic tumors and non-metastatic tumors. In many cases the enriched pathways from one class in metastatic tumors are the class-specific pathways from another class, suggesting that metastasis may represent phenotypic convergence, therefore potentially identifying key pathways to focus on therapeutically for prevention of class-specific metastasis. In summary, our observations suggest that some genes act as drivers of genome instability while other class-specific genes confer increased fitness in combinatorial fashion. Thus, we present a coherent picture of global tumor biology, in which genes and pathways can generally be assigned to one of three stages: initiation, expansion, and metastasis based on their distribution in tumors of every class. 
+Cancer is a disease of cellular metabolism and other basic biochemical processes common to all cells. However, molecular signatures remain largely indistinguishable from tissue-of-origin, and general, unifying principles remain obscure. To address this challenge, we reduced mutation data to disruptions in a select set of pathways pointing to basic cell biology, from DNA replication to cellular communication. Using dimension reduction techniques, we assigned tumor samples into twelve classes distinct from their tissues-of-origin and largely free of bias from mutational burden or clinical stage. We showed that these tumor classes vary in prognosis by modeling relative risk of death in different classes and cancer types. We identified class-specific mutations in different tissues, demonstrating how tissue-specific signatures contribute to common cellular phenotypes. Moreover germline risk mutations involved in genome stability, such as BRCA1 and Rb1, are equally distributed among our classes, somewhat contrary to the expectation that such genes are hallmarks of molecular sub-types. We also investigated pathways that distinguish between metastatic and non-metastatic tumors, and found that most meaningful differences are class-specific. Most metastatic enriched pathways from one class in metastatic tumors are class-specific pathways from another class, suggesting phenotypic convergence, and potentially highlighting key pathways to focus on therapeutically for prevention of class-specific relapse. In summary, our observations suggest that some genes act as drivers of genome instability in all classes, while different sets of class-specific genes confer increased fitness in combinatorial fashion, eventually converging on one or more end-stage disease phenotypes. Thus, we present a coherent picture of global tumor biology, and explain how common cellular dysfunction might arise from tissue-specific mutations.
 
 ## Introduction
  
